src/objects/SFDC_Candidate__c.object
<CustomObject>
    <description>Candidates selected for consideration of a job</description>
    <fields>
        <fullName>Background_Check__c</fullName>
        <label>Background Check</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Compensation__c</fullName>
        <label>Candidate_Compensation</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Contact_Date__c</fullName>
        <label>Contact_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Candidate_Status__c</fullName>
        <label>Candidate Status</label>
        <picklist>
            <picklistValues>
                <fullName>Back Burner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate not interested - Compensation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate not interested - Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate not interested - Took another job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider for future role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Resigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluation - Hiring Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Round Interview/Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired- Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired- Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview - Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interview - Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-None-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No position available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer - Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer - Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Declined - Commute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Declined - Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Declined - Counter Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Declined - MISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer Declined - Other opp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer - negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer - Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer - Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen - On the fence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen - Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Screen - Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionnaire - Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Questionnaire - Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_US_work_authorization__c</fullName>
        <label>Candidate US work authorization</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_assign_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign to</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000001WXBFEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>Current Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Position_Duration__c</fullName>
        <label>Current Position Duration</label>
        <picklist>
            <picklistValues>
                <fullName>0 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7-12 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - 2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - 4 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>more than 5 years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>Disposition</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candidate Withdrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consider for Future Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Back Burner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <picklist>
            <picklistValues>
                <fullName>High School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree in Progress - BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree in Progress - MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 year college</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Masters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Doctorate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional (MD, JD, CPA)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <label>Interviewer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Codes__c</fullName>
        <label>Job Codes</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Location__c</fullName>
        <label>Job Location</label>
        <picklist>
            <picklistValues>
                <fullName>Main Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Office WA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branch Office CA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <description>The phone number at which the candidate prefers to be call.</description>
        <label>Preferred_Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previously_Interviewed__c</fullName>
        <label>Previously Interviewed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Race_Ethnic_Origin__c</fullName>
        <label>Race_Ethnic Origin</label>
        <picklist>
            <picklistValues>
                <fullName>American Indian or Alaskan Native</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>African American</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hispanic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caucasian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I do not wish to complete questionnaire</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Declining_Offer__c</fullName>
        <label>Reason for Declining Offer</label>
        <picklist>
            <picklistValues>
                <fullName>Compensation too low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not interested in the position</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Took another job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruiter_Notes__c</fullName>
        <label>Recruiter Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referring_Employee_Relationship__c</fullName>
        <label>Referring Employee Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Former co-worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referring Employee</label>
        <referenceTo>SFDC_Referring_Employee__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>R00N30000001WXBHEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resume_Rcvd_Date__c</fullName>
        <label>Resume Rcvd Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>Resume</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Active_Declined_Status__c</fullName>
        <label>Active_Declined_Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Address__c</fullName>
        <description>Address in full</description>
        <label>Candidate Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Alt_Email__c</fullName>
        <description>Alternative or second email address</description>
        <label>Candidate_Alt_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Birthdate__c</fullName>
        <label>Candidate_Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Email__c</fullName>
        <label>Candidate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Name__c</fullName>
        <description>Full name of the candidate</description>
        <label>Candidate Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>SFDC_Department__c</referenceTo>
        <relationshipLabel>Candidates</relationshipLabel>
        <relationshipName>R00N30000001WXBGEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Candidate</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Candidate_Name__c</columns>
        <columns>Candidate_Status__c</columns>
        <columns>SFDC_Candidate_Email__c</columns>
        <columns>Preferred_Phone__c</columns>
        <columns>Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>